# live-workspace

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
images/: live-cover.psd  livestream-bg.psd  uwu.psd
src/: __init__.py
src/lib/: fakebot.py  http.py  obs.py  osu_api.py
src/lib/notification/: __init__.py  manager.py
src/lib/tosu/: __init__.py  config.py  model.py
src/plugins/: beatmap_request.py  message_notify.py  osu_stable_notify.py
src/plugins/notifiers/: __init__.py  osu_lazer.py  osu_stable.py
